// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Stack should render children horizontal 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    dataSet={{}}
    style={
      {
        "flexDirection": "column",
      }
    }
  >
    <Text>
      Stack 1
    </Text>
    <View
      dataSet={{}}
      style={{}}
    />
    <Text>
      Stack 2
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Component: Stack should render children vertical 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    dataSet={{}}
    style={{}}
  >
    <Text>
      Stack 1
    </Text>
    <View
      dataSet={{}}
      style={{}}
    />
    <Text>
      Stack 2
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Component: Stack should render space 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    dataSet={{}}
    style={{}}
  >
    <Text>
      Stack 1
    </Text>
    <View
      dataSet={{}}
      style={
        {
          "height": 16,
        }
      }
    />
    <Text>
      Stack 2
    </Text>
  </View>
</RNCSafeAreaProvider>
`;
